# cheetah

./: .gitignore  README.md
python/: cheetah-crawler.py  cheetah-gui.py
python/lib/: crawler_hdf5.py  crawler_pal.py  gui_dialogs.py  gui_locations.py  gui_setup_new_experiment.py
source/: CMakeLists.txt
source/cheetah-pal/: CMakeLists.txt
source/cheetah-pal/include/: hdf5-reader.h
source/cheetah-pal/src/: cheetah-pal.cpp  hdf5-reader.cpp
source/libcheetah/: CMakeLists.txt
source/libcheetah/include/: detectorObject.h
source/libcheetah/src/: detectorObject.cpp  saveCXI.cpp
